[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=3]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -8.29233
margin_right = 1031.0
margin_bottom = 601.708
color = Color( 0.784314, 0.635294, 0.784314, 1 )

[node name="StartPosition1" type="Position2D" parent="."]
position = Vector2( 200, 300 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 798.892, 301.108 )

[node name="Player1" parent="." instance=ExtResource( 5 )]

[node name="Player2" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="HealthBar" parent="HUD" instance=ExtResource( 7 )]
margin_left = 15.5083
margin_top = -3.87705
margin_right = 15.5083
margin_bottom = -3.87708
rect_scale = Vector2( 0.2, 0.2 )
[connection signal="hit" from="Player1" to="." method="_on_Player_hit"]
[connection signal="hit" from="Player2" to="." method="_on_Player_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
